--- a/src/main/resources/templates/comment_index.html
+++ b/src/main/resources/templates/comment_index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div th:insert="header_user :: header(user=${user})"></div>
+<h3><th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "comments")}'></th:block></h3>
 <div>
     <div th:if="${comments.isEmpty()}">
         <h2>
