--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div th:insert="header_user :: header(user=${user})"></div>
+<h3>
+    <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "solutions")}'></th:block>
+</h3>
 <a href="/Solution/Create">
     <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "create")}'></th:block>
 </a>
