Fixing problems with displaying multiline text.

--- a/src/main/resources/templates/assignment_index.html
+++ b/src/main/resources/templates/assignment_index.html
@@ -46,7 +46,7 @@
         <tr>
             <td th:utext="${assignment.getId()}"></td>
             <td th:utext="${assignment.getTitle()}"></td>
-            <td th:utext="${assignment.getContent()}"></td>
+            <td th:utext="${assignment.getContentMultiline()}"></td>
             <td th:utext="${assignment.getTeacher()}"></td>
             <td th:utext="${assignment.getCourse()}"></td>
             <td>
