--- a/src/main/resources/templates/course_index.html
+++ b/src/main/resources/templates/course_index.html
@@ -6,12 +6,12 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header_user :: header(user=${user})"></div>
+<div th:insert="header_selector :: selector(user=${user})"></div>
 <h3>
     <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "courses")}'></th:block>
 </h3>
 <div class="btn-group">
-    <div th:if="${!user.isStudent()}">
+    <div th:if="${user != null && !user.isStudent()}">
         <a href="/Course/Create">
             <button type="button" class="btn btn-primary btn-sm">
                 <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "create")}'></th:block>
