--- a/src/main/resources/templates/assignmentSolution_index.html
+++ b/src/main/resources/templates/assignmentSolution_index.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header_user :: header(user=${user})"></div>
+<div th:insert="header_selector :: selector(user=${user})"></div>
 <a href="/AssignmentSolution/SolutionsToCheck">
     <button type="button" class="btn btn-primary btn-sm">
         <th:block th:text='${T(com.smanager.Bundles).getMessage("assignmentSolution", "checkSolutions")}'></th:block>
