--- a/src/main/resources/templates/comment_form.html
+++ b/src/main/resources/templates/comment_form.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header :: header(user=${user})"></div>
+<div th:insert="header_selector :: selector(user=${user})"></div>
 <h2></h2>
 <form action="#" th:action="@{/Comment/Create}" th:object="${comment}" method="post">
     <input type="hidden" th:field="*{id}">
