--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Group</title>
+    <title>Error</title>
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header_selector :: selector(user=${user})"></div>
-<div th:insert="group_index :: index"></div>
-<div th:insert="header :: header"></div>
+<div th:replace="header_selector :: selector(user=${user})"></div>
+<h3>Access denied. Please go back.</h3>
 </body>
 </html>
