--- a/src/main/resources/templates/solution_details.html
+++ b/src/main/resources/templates/solution_details.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header_user :: header(user=${user})"></div>
+<div th:insert="header_selector :: selector(user=${user})"></div>
 <div th:insert="solution_fragment :: div_view(solution=${solution}, user=${user})"></div>
 </body>
 </html>
