--- a/src/main/resources/templates/work_index_teacher.html
+++ b/src/main/resources/templates/work_index_teacher.html
@@ -16,7 +16,7 @@
         <div class="list-group col-10">
             <th:block th:each="course : ${courses}">
                 <div class="list-group-item list-group-item-primary">
-                    <p th:utext="${course}"></p>
+                    <p th:utext="${course.getTitle()}"></p>
                 </div>
                 <div class="list-group">
                     <th:block th:each="assignment, i : ${courseAssignments.get(course)}">
@@ -30,6 +30,13 @@
                                 <th:block th:each="solution : ${assignmentsSolutions.get(assignment)}">
                                     <div class="list-group-item">
                                         <div th:insert="solution_fragment :: div_view(solution=${solution}, user=${user})"></div>
+                                        <button class="btn btn-primary" type="button" data-toggle="collapse" th:href="'#comments-' + ${solution.getId()}"
+                                                role="button" aria-controls="'comments-' + ${solution.getId()}">
+                                            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "showComments")}'></th:block>
+                                        </button>
+                                        <div class="collapse" th:id="'comments-' + ${solution.getId()}"
+                                             th:insert="comment_fragment :: index(solution=${solution})">
+                                        </div>
                                     </div>
                                 </th:block>
                             </div>
