--- a/src/main/resources/templates/comment_fragment.html
+++ b/src/main/resources/templates/comment_fragment.html
@@ -8,42 +8,14 @@
 <body>
 <div th:fragment="div_view(comment)" class="list-group-item list-group-item-light">
     <div class="form-group row">
-        <p class="col-sm-2">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "id")}'></th:block>:
+        <p th:if="${comment.getStudent() != null}" th:utext="${comment.getStudent()}" class="col-sm-10">
         </p>
-        <p th:utext="${comment.getId()}" class="col-sm-6"></p>
+        <p th:unless="${comment.getStudent() != null}" th:utext="${comment.getTeacher()}" class="col-sm-10">
+        </p>
+        <p th:utext="${comment.getFormattedDate()}" class="col-sm-2" style="text-align: right"></p>
     </div>
     <div class="form-group row">
-        <p class="col-sm-2">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "content")}'></th:block>:
-        </p>
-        <p th:utext="${comment.getContent()}" class="col-sm-6"></p>
-    </div>
-    <div class="form-group row">
-        <p class="col-sm-2">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "creationDate")}'></th:block>:
-        </p>
-        <p th:utext="${comment.getCreationDate()}" class="col-sm-6"></p>
-    </div>
-    <div class="form-group row">
-        <p class="col-sm-2">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "solution")}'></th:block>:
-        </p>
-        <p th:utext="${comment.getSolution()}" class="col-sm-6"></p>
-    </div>
-    <div class="form-group row">
-        <div th:if="${comment.getStudent() != null}">
-            <p class="col-sm-2">
-                <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "student")}'></th:block>:
-            </p>
-            <p th:utext="${comment.getStudent()}" class="col-sm-6"></p>
-        </div>
-        <div th:unless="${comment.getStudent() != null}">
-            <p class="col-sm-2">
-                <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "teacher")}'></th:block>:
-            </p>
-            <p th:utext="${comment.getTeacher()}" class="col-sm-6"></p>
-        </div>
+        <p th:utext="${comment.getContent()}" class="col-sm-12"></p>
     </div>
 </div>
 
