--- a/src/main/resources/templates/comment_fragment.html
+++ b/src/main/resources/templates/comment_fragment.html
@@ -12,7 +12,7 @@
         </p>
         <p th:unless="${comment.getStudent() != null}" th:utext="${comment.getTeacher()}" class="col-sm-10">
         </p>
-        <p th:utext="${comment.getFormattedDate()}" class="col-sm-2" style="text-align: right"></p>
+        <p th:utext="${comment.getFormattedDate()}" class="col-sm-2 right-aligned"></p>
     </div>
     <div class="form-group row">
         <p th:utext="${comment.getContent()}" class="col-sm-12"></p>
