--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -35,16 +35,16 @@
 <div th:fragment="div_view(solution, user)" class="list-group-item list-group-item-light">
     <div class="form-group row">
         <p class="col-sm-10" th:text="${solution.getStudent().getInfo()}"></p>
-        <p class="col-sm-2" style="text-align: right" th:utext="${solution.getFormattedDate()}"></p>
+        <p class="col-sm-2 right-aligned" th:utext="${solution.getFormattedDate()}"></p>
     </div>
     <div class="form-group row">
-        <p th:utext="${solution.getContent()}" class="col-sm-12" style="text-align: center"></p>
+        <p th:utext="${solution.getContent()}" class="col-sm-12 center-aligned"></p>
     </div>
     <div class="form-group row">
         <p class="col-sm-10">
             <a th:href="${solution.getPath(paths)}" th:text='${T(com.smanager.Bundles).getMessage("solution", "download")}'></a>
         </p>
-        <p th:utext="${solution.getGrade()}" class="col-sm-2" style="text-align: right"></p>
+        <p th:utext="${solution.getGrade()}" class="col-sm-2 right-aligned"></p>
     </div>
 </div>
 
