--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -55,14 +55,7 @@
     </th:block>
     </tbody>
 </table>
-<div>
-    <ul class="pagination">
-        <th:block th:each="page : ${pages}">
-            <li class="page-item">
-                <a class="page-link" th:href="'/Solution/Index/' + ${page}" th:text="${page}"></a>
-            </li>
-        </th:block>
-    </ul>
+<div th:insert="pagination_fragments :: pagination(pages=${pages}, url='/Solution/Index/')">
 </div>
 <div>
     <p class="h3">
