--- a/src/main/resources/templates/work_index.html
+++ b/src/main/resources/templates/work_index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div th:insert="header_selector :: selector(user=${user})"></div>
+<div th:insert="report_menu :: menu"></div>
 <div class="h3">
     <p th:utext="${student}"></p>
 </div>
