--- a/src/main/resources/templates/side_menu.html
+++ b/src/main/resources/templates/side_menu.html
@@ -15,7 +15,7 @@
                     +
                 </button>
                 <a th:href="${course.getDetailsUrl()}">
-                    <th:block th:utext="${course}"></th:block>
+                    <th:block th:utext="${course.getTitle()}"></th:block>
                 </a>
                 <ul class="collapse side-menu-second" th:id="'course-' + ${c_i.count}">
                     <th:block th:each="assignment, a_i : ${course.getAssignments()}">
@@ -25,7 +25,7 @@
                                 +
                             </button>
                             <a th:href="${assignment.getDetailsUrl()}">
-                                <th:block th:utext="${assignment}"></th:block>
+                                <th:block th:utext="${assignment.getTitle()}"></th:block>
                             </a>
                             <ul class="collapse side-menu-third" th:id="'course-' + ${c_i.count} + '-assignment-' + ${a_i.count}">
                                 <th:block th:each="solution, s_i : ${assignment.getSolutions()}">
