--- a/src/main/resources/templates/head_fragment.html
+++ b/src/main/resources/templates/head_fragment.html
@@ -3,6 +3,7 @@
 <th:block th:fragment="scripts">
     <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
     <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </th:block>
