--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -14,6 +14,11 @@
     <td th:utext="${solution.getAssignment()}"></td>
     <td th:utext="${solution.isFinished()}"></td>
     <td th:utext="${solution.getFormattedDate()}"></td>
+    <td class="center-aligned">
+        <a th:href="${solution.getPath()}">
+            <i class="material-icons link-icon">attachment</i>
+        </a>
+    </td>
     <td>
         <a th:href="@{/Solution/Edit(id=${solution.getId()})}"/>
         <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "edit")}'></th:block>
